# Continuous-Motion-Recognition

./: CMakeLists.txt  errorlog.txt  prj.conf
boards/: nrf5340dk_nrf5340_cpuapp_ns.overlay
continuous-motion-recognition/: README.txt
continuous-motion-recognition/model-parameters/: model_metadata.h  model_variables.h
continuous-motion-recognition/tflite-model/: trained_model_compiled.cpp
model-parameters/: anomaly_clusters.h
src/: main.c
tflite-model/: trained_model_compiled.h
